--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 @import url(./CSS/rodape/rodape.css);
 @import url(./CSS/contato/contato.css);
 @import url(./CSS/sobre/sobre.css);
-
+@import url(./CSS/animacao/animacao.css);
 
 
 
