--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -91,6 +91,16 @@ a .icone-androide {
   .subtitulo {
     text-align: center;
   }
+  .projetos {
+    margin-left: 60px;
+  }
+  .habilidades-lista { 
+    margin-left: 25px;
+  }
+  .conteudo {
+    margin-bottom: 50px;
+    margin-right: 60px;
+  }
 }
 
 @media (max-width: 600px) {
@@ -103,6 +113,13 @@ a .icone-androide {
   }
   .conteudo {
     grid-template-columns: 1fr;
+    margin-left: 50px;
+  }
+  .projetos {
+    margin-left: 10px;
+  }
+  .habilidades-lista { 
+    margin-left: 25px;
   }
   .introducao {
     text-align: left;
