--- a/CSS/contato/contato.css
+++ b/CSS/contato/contato.css
@@ -29,13 +29,13 @@
 .redes-sociais {
   display: flex;
   gap: 40px;
+  width: 100%;
   height: 50vh;
   place-content: center;
   font-family: orbitron, Arial, Helvetica, sans-serif;
 }
 .redes-sociais-itens {
   display: flex;
-  flex-direction: column;
   gap: 10px;
   align-items: center;
   justify-content: center;
